Dark Mode & Bugfix, UI Bugfix

--- a/style.css
+++ b/style.css
@@ -85,8 +85,36 @@ body {
     background: var(--calc-surface);
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.github {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.375rem;
+
+    width: fit-content;
+    padding: 0.875rem;
+
+    border-radius: 999px;
+
+    background: var(--toggle-bg);
+
+    box-shadow:
+        inset 0 1px 2px #ffffff1a,
+        0 2px 4px #00000025,
+        0 4px 8px #00000015;
+
+    margin-bottom: 1rem;
+}
+
 .dark-mode {
     display: flex;
+    justify-content: center;
     align-items: center;
 
     width: fit-content;
